Fixes for index.html - Update contact information

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                           <!-- title and description -->
                           <div class="title-desc mb-0">
                             <div class="anim-4">
-                              <p>Want to start an awesome project or have questions about Code Wise?<br />Drop a line to <a href="mailto:ryan@Code Wiseweb.com">ryan@Code Wiseweb.com</a>
+                              <p>Want to start an awesome project or have questions about Code Wise?<br />Drop a line to <strong>ryan@codewiseweb.com</strong>
                               </p>
                             </div>
                           </div>
