Updates for index.html
- Considerable updates to page content, section footer links

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-  <title>Code Wise</title>
+  <title>Codewise</title>
 
   <!-- Meta -->
   <meta name="description"
-    content="Supporting the design and development of new and existing browser-based solutions.">
+    content="Codewise works with startups and established businesses to consult on their products and develop new or redesign existing browser-based products.">
 
   <!-- Disable screen scaling-->
   <meta name="viewport"
@@ -56,7 +56,7 @@
     <!-- Begin logo/brand -->
     <a class="navbar-brand" href="./#">
       <span class="text">
-        <span class="line">Code Wise</span>
+        <span class="line">Codewise</span>
       </span>
     </a>
     <!-- End logo/brand -->
@@ -79,7 +79,7 @@
       </div>
       <!-- section title -->
       <div class="section-title title-centered title-parallax" id="home-parralax-img" data-relative-input="true">
-        <h2 class="text-stroke" data-depth="0.2">Code Wise</h2>
+        <h2 class="text-stroke" data-depth="0.2">codewise</h2>
       </div>
       <!-- Begin section wrapper -->
       <div class="section-wrapper with-margin">
@@ -93,7 +93,7 @@
                   <span class="light">Ryan </span>
                   <span class="normal">Kennedy</span>
                 </h1>
-                <p class="anim-3"><strong>Code Wise</strong> is Ryan Kennedy, a seasoned technologist with a history of improving IT outcomes.</p>
+                <p class="anim-3">is <b>Codewise</b>, a full-stack development consultantancy for new or existing browser-based products.</p>
               </div>
             </div>
 
@@ -133,13 +133,20 @@
             <div class="col-12  text-left">
               <!-- title and description -->
               <div class="title-desc display-text-big anim-4">
-                <p>With over a decade of experience, Code Wise supports the design and development of new and existing browser-based solutions for startups, large companies and everyone in between.
+                <p>Codewise works with startups and established businesses to consult on their products and develop new or redesign existing browser-based products.
                 </p>
               </div>
             </div>
           </div>
         </div>
         <!-- End content -->
+
+        <footer class="section-footer scrolldown">
+          <a class="down">
+            <span class="icon"></span>
+            <span class="txt">Services</span>
+          </a>
+        </footer>
       </div>
       <!-- End section wrapper -->
 
@@ -169,7 +176,7 @@
             <div class="col-12 col-lg-10 text-left">
               <!-- title and description -->
               <div class="title-desc display-text-big anim-4">
-                <p>Major contributions to your backend, frontend, and app infrastructure.
+                <p>Add a major contributor to your product's backend, frontend, and infrastructure.
                 </p>
               </div>
             </div>
@@ -180,13 +187,13 @@
             <div class="col-12 text-left">
               <!-- title and description -->
               <div class="title-desc pr-4">
-                <h2 class="display-4 anim-2 text-primary">cloud.</h2>
+                <h2 class="display-4 anim-2 text-primary">integration.</h2>
               </div>
             </div>
             <div class="col-12 col-lg-10 text-left">
               <!-- title and description -->
               <div class="title-desc display-text-big anim-4">
-                <p>Build out or enhance existing services throughout your organization.
+                <p>Build out new services or enhance existing ones throughout your product.
                 </p>
               </div>
             </div>
@@ -203,7 +210,7 @@
             <div class="col-12 col-lg-10 text-left">
               <!-- title and description -->
               <div class="title-desc display-text-big anim-4">
-                <p>Secure coding best practices, hardening, and protocol implementation.
+                <p>Improve your product's safety and reliability ahead of pentests or audits.
                 </p>
               </div>
             </div>
@@ -214,13 +221,13 @@
             <div class="col-12 text-left">
               <!-- title and description -->
               <div class="title-desc pr-4">
-                <h2 class="display-4 anim-2 text-primary">data.</h2>
+                <h2 class="display-4 anim-2 text-primary">automation.</h2>
               </div>
             </div>
             <div class="col-12 col-lg-10 text-left">
               <!-- title and description -->
               <div class="title-desc display-text-big anim-4">
-                <p>Explore, export, and manipulate your application data.
+                <p>Offload tasks and augment your own or your client's processes.
                 </p>
               </div>
             </div>
@@ -228,6 +235,13 @@
 
         </div>
         <!-- End content .section-content-->
+
+        <footer class="section-footer scrolldown">
+          <a class="down">
+            <span class="icon"></span>
+            <span class="txt">Contact</span>
+          </a>
+        </footer>
       </div>
       <!-- End section wrapper .section-wrapper-->
 
@@ -269,7 +283,7 @@
                           <!-- title and description -->
                           <div class="title-desc mb-0">
                             <div class="anim-4">
-                              <p>Want to start an awesome project or have questions about Code Wise?<br />Drop a line to <strong>ryan@codewiseweb.com</strong>
+                              <p>Drop me an email, tell me a bit about your business and product, and we can discuss how we can work together.<br /><b>ryan@codewiseweb.com</b>
                               </p>
                             </div>
                           </div>
