Updates for index.html
- Consistency and section language update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Meta -->
   <meta name="description"
-    content="Codewise works with startups and established businesses to consult on their products and develop new or redesign existing browser-based products.">
+    content="Codewise works with startups and established businesses to consult on their products and develop new or extend existing browser-based products.">
 
   <!-- Disable screen scaling-->
   <meta name="viewport"
@@ -133,7 +133,7 @@
             <div class="col-12  text-left">
               <!-- title and description -->
               <div class="title-desc display-text-big anim-4">
-                <p>Codewise works with startups and established businesses to consult on their products and develop new or redesign existing browser-based products.
+                <p>Codewise works with startups and established businesses to consult on their products and develop new or extend existing browser-based products.
                 </p>
               </div>
             </div>
@@ -227,7 +227,7 @@
             <div class="col-12 col-lg-10 text-left">
               <!-- title and description -->
               <div class="title-desc display-text-big anim-4">
-                <p>Offload tasks and augment your own or your client's processes.
+                <p>Offload repeating tasks, or augment your own or your client's custom processes.
                 </p>
               </div>
             </div>
