Fixes for index.html
- Incremental content updates: contact

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                           <!-- title and description -->
                           <div class="title-desc mb-0">
                             <div class="anim-4">
-                              <p>Drop me an email, tell me a bit about your business and product, and we can discuss how we can work together.<br /><b>ryan@codewiseweb.com</b>
+                              <p>Drop me an email, tell me a bit about your business and product, and we can schedule time to discuss how we can work together; <b>ryan@codewiseweb.com</b>
                               </p>
                             </div>
                           </div>
