Fixes for index.html
- Grammar fix: services

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="col-12 col-lg-10 text-left">
               <!-- title and description -->
               <div class="title-desc display-text-big anim-4">
-                <p>Offload repeating tasks, or augment your own or your client's custom processes.
+                <p>Offload repeating tasks, or augment your own or your clients' custom processes.
                 </p>
               </div>
             </div>
